    ::[SOLVED] BUG in log write about the pointers << The write log get the wrong pointer
> [FILE:create_map.py] Fixed bug to incorrect remove DIR_RESULT_CLAIMS+"/tmp_file_map.map"
> [FILE:create_map.py] Executed tests to generate graphml
> [FILE:create_map.py] Identified when the verification was VERIFICATION SUCCESSFUL and not create a graph, cuz is not possible


> [FILE:check_safety_memory_FORTES.c] Updated the print trace to "-" when is not possible to print the value
> [FILE:create_map.py] Fixed bug in ./map2check-fortes.py -a code_samples/memsafety_category_svcomp14/test-0019_false-valid-memtrack.c
      is not possible to get some var type - For strutures type is blank -- kernel problem self.get_current_type


> [FILE:create_map.py] TODO: Fixing Bug related to track of line number to original code. Test case: test-0019_1_false-valid-memtrack.c



> [FILE:create_map.py] TODO: Checking if is really need to identify what to print in the map list
> [FILE:create_map.py] TODO: Fixing BUG in example4.c we do catch the error
> [FILE:create_map.py] TODO: Executing test with CPAChecker in site examples
> [FILE:create_map.py] TODO: Adding in the map list a parameter to know when is to print the variable values






> [FILE:write_graphml_output.py] TODO: Update the assumption attribute to correct form
> [FILE:write_graphml_output.py] TODO: Validate the assumption write in case of arrays
    ::BUG-ARRAY to print the array values from memory address
> [FILE:create_map.py] TODO: in the complete trace add the loop assignment, such as: i++

TO test with CPAChecker:

$ scripts/cpa.sh -64 -explicitAnalysis-NoRefiner -setprop analysis.checkCounterexamples=false -setprop cpa.value.merge=SEP -setprop cfa.useMultiEdges=false -setprop parser.transformTokensToLines=true -spec witness_format/example0.graphml -spec PropertyERROR.prp witness_format/example0.c






> [FILE:check_safety_memory_FORTES.c] BUG in void print_debug(LIST_DYN_OBJ_FORTES *list); is not print correct




